@@ -142,9 +142,9 @@ Device=/dev/ttyS0
 Size=20x4
 # Set the initial contrast [default: 560; legal: 0 - 1000]
 Contrast=350
-# Set the initial brightness [default: 255; legal: 0 - 255]
-Brightness=255
-# Set the initial off-brightness [default: 0; legal: 0 - 255]
+# Set the initial brightness [default: 1000; legal: 0 - 1000]
+Brightness=1000
+# Set the initial off-brightness [default: 0; legal: 0 - 1000]
 # This value is used when the display is normally
 # switched off in case LCDd is inactive
 OffBrightness=0
